// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stat should render a bar chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <h5
      className="text-center"
    >
      Stat label
    </h5>
    <div>
      <BarStat
        config={
          Immutable.Map {
            style: "bar",
          }
        }
        data={
          Immutable.Map {
          }
        }
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a key metrics chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <h5
      className="text-center"
    >
      Stat label
    </h5>
    <div>
      <KeyMetricStat
        config={
          Immutable.Map {
            style: "key-metrics",
          }
        }
        data={
          Immutable.Map {
          }
        }
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a line chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <h5
      className="text-center"
    >
      Stat label
    </h5>
    <div>
      <LineStat
        config={
          Immutable.Map {
            style: "line",
          }
        }
        data={
          Immutable.Map {
          }
        }
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
      />
    </div>
  </CardBody>
</Card>
`;

exports[`Stat should render a table chart 1`] = `
<Card
  className="stats-card mb-3"
  tag="div"
>
  <CardBody
    tag="div"
  >
    <h5
      className="text-center"
    >
      Stat label
    </h5>
    <div>
      <TableStat
        config={
          Immutable.Map {
            style: "table",
          }
        }
        data={
          Immutable.Map {
          }
        }
        label="Stat label"
        legend={
          Immutable.Map {
          }
        }
        meta={
          Immutable.Map {
          }
        }
        name="stat_name"
      />
    </div>
  </CardBody>
</Card>
`;
